# quarklink-esp32-cellular

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  main.c
